// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HistoryDisplay/> renders base state consistently 1`] = `
<div
  class="HistoryDisplay-root-1"
>
  <div
    class="HistoryDisplay-scrollable-2"
    style="margin-right:0"
  >
    <div
      class="HistoryDisplay-historyContainer-3"
    >
      <div
        style="position:relative"
      >
        <div
          class="HistoryDisplay-verticalSpacer-5"
        />
        <div
          class="HistoryDisplay-verticalSpacer-5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<HistoryDisplay/> renders basic history consistently 1`] = `
<div
  class="HistoryDisplay-root-1"
>
  <div
    class="HistoryDisplay-scrollable-2"
    style="margin-right:0"
  >
    <div
      class="HistoryDisplay-historyContainer-3"
    >
      <div
        style="position:relative"
      >
        <div
          class="HistoryDisplay-verticalSpacer-5"
        />
        <h1
          class="MuiTypography-root MuiTypography-h1 MuiTypography-alignCenter HistoryDisplay-historyRow-4"
        >
          <span>
            2
          </span>
          <span>
            , 
          </span>
          <span>
            3
          </span>
        </h1>
        <h1
          class="MuiTypography-root MuiTypography-h1 MuiTypography-alignCenter HistoryDisplay-historyRow-4"
        >
          <span>
            1
          </span>
        </h1>
        <h1
          class="MuiTypography-root MuiTypography-h1 MuiTypography-alignCenter HistoryDisplay-historyRow-4"
        >
          <span>
            1
          </span>
        </h1>
        <h1
          class="MuiTypography-root MuiTypography-h1 MuiTypography-alignCenter HistoryDisplay-historyRow-4"
        >
          <span>
            4
          </span>
        </h1>
        <div
          class="HistoryDisplay-verticalSpacer-5"
        />
      </div>
    </div>
  </div>
</div>
`;
